python/testData/quickFixes/PyAddImportQuickFixTest/canonicalNamesFromHigherLevelPackage/main.py
<error descr="Unresolved reference 'MyClass'">MyClass</error>()